@@ -1,18 +1,25 @@
 package got.common.world.biome.westeros;
 
-import java.util.ArrayList;
+import java.util.*;
 
 import got.client.sound.GOTBiomeMusic;
 import got.client.sound.GOTBiomeMusic.MusicRegion;
 import got.common.database.*;
 import got.common.world.biome.GOTBiome;
+import got.common.world.biome.variant.GOTBiomeVariant;
+import got.common.world.feature.GOTWorldGenBoulder;
 import got.common.world.map.GOTWaypoint.Region;
 import got.common.world.spawning.*;
 import got.common.world.spawning.GOTBiomeSpawnList.SpawnListContainer;
 import got.common.world.structure.westeros.dragonstone.*;
-import net.minecraft.world.gen.feature.WorldGenMinable;
+import net.minecraft.block.Block;
+import net.minecraft.init.Blocks;
+import net.minecraft.world.World;
+import net.minecraft.world.gen.feature.*;
 
 public class GOTBiomeDragonstone extends GOTBiomeWesteros {
+	public WorldGenerator boulderGen = new GOTWorldGenBoulder(Blocks.stone, 0, 2, 4);
+	
 	public GOTBiomeDragonstone(int i, boolean major) {
 		super(i, major);
 		decorator.addSoil(new WorldGenMinable(GOTRegistry.obsidianGravel, 32), 20.0f, 0, 64);
@@ -34,6 +41,40 @@ public class GOTBiomeDragonstone extends GOTBiomeWesteros {
 		ArrayList<SpawnListContainer> c3 = new ArrayList<>();
 		c3.add(GOTBiomeSpawnList.entry(GOTSpawnList.REACH_CONQUEST, 10).setSpawnChance(GOTBiome.CONQUEST_SPAWN));
 		npcSpawnList.newFactionList(0).add(c3);
+	}
+
+	@Override
+	public void decorate(World world, Random random, int i, int k) {
+		super.decorate(world, random, i, k);
+		if (random.nextInt(6) == 0) {
+			for (int l = 0; l < 3; ++l) {
+				int i1 = i + random.nextInt(16) + 8;
+				int k1 = k + random.nextInt(16) + 8;
+				boulderGen.generate(world, random, i1, world.getHeightValue(i1, k1), k1);
+			}
+		}
+	}
+
+	@Override
+	public void generateBiomeTerrain(World world, Random random, Block[] blocks, byte[] meta, int i, int k, double stoneNoise, int height, GOTBiomeVariant variant) {
+		double d2;
+		Block topBlock_pre = topBlock;
+		int topBlockMeta_pre = topBlockMeta;
+		Block fillerBlock_pre = fillerBlock;
+		int fillerBlockMeta_pre = fillerBlockMeta;
+		double d1 = biomeTerrainNoise.func_151601_a(i * 0.07, k * 0.07);
+		d2 = biomeTerrainNoise.func_151601_a(i * 0.4, k * 0.4);
+		if (d1 + d2 > 0.5) {
+			topBlock = Blocks.stone;
+			topBlockMeta = 0;
+			fillerBlock = topBlock;
+			fillerBlockMeta = topBlockMeta;
+		}
+		super.generateBiomeTerrain(world, random, blocks, meta, i, k, stoneNoise, height, variant);
+		topBlock = topBlock_pre;
+		topBlockMeta = topBlockMeta_pre;
+		fillerBlock = fillerBlock_pre;
+		fillerBlockMeta = fillerBlockMeta_pre;
 	}
 
 	@Override
