@@ -102,12 +102,10 @@ public class GOTStructureLhazarVillage extends GOTVillageGen {
 
 		@Override
 		public boolean isVillageSpecificSurface(World world, int i, int j, int k) {
-			if (villageType == VillageType.TOWN) {
-				Block block = world.getBlock(i, j, k);
-				int meta = world.getBlockMetadata(i, j, k);
-				if (block == GOTRegistry.slabSingleDirt && (meta == 1 || meta == 0) || block == GOTRegistry.slabSingleGravel && meta == 0 || block == GOTRegistry.dirtPath && meta == 0 || block == GOTRegistry.dirtPath && meta == 0 || block == Blocks.dirt && meta == 1 || block == Blocks.gravel && meta == 0) {
-					return true;
-				}
+			Block block = world.getBlock(i, j, k);
+			int meta = world.getBlockMetadata(i, j, k);
+			if (block == GOTRegistry.slabSingleDirt && (meta == 1 || meta == 0) || block == GOTRegistry.slabSingleGravel && meta == 0 || block == GOTRegistry.dirtPath && meta == 0 || block == GOTRegistry.dirtPath && meta == 0 || block == Blocks.dirt && meta == 1 || block == Blocks.gravel && meta == 0) {
+				return true;
 			}
 			return false;
 		}
